--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
@@ -1,6 +1,6 @@
 @import "../../../sass/variables.scss";
-@import "../../../sass/material-theme.scss";
-// --- table ---
+@import "../../../sass/material-theme.scss"; // --- table ---
+
 .mat-cell,
 .mat-header-cell {
   padding: 15px;
@@ -22,6 +22,7 @@
   justify-content: space-around;
 }
 // --- links ---
+
 a {
   color: $default-color;
 
@@ -35,8 +36,7 @@ a {
   font-size: 1em;
 }
 // --- icons ---
-$icon-size: 32px;
-// .expt-type {
+$icon-size: 32px; // .expt-type {
 //   display: inline-block;
 //   margin: 0.5em 1.5em 0.5em 0;
 //   padding: 5px 8px 5px 5px;
@@ -86,6 +86,7 @@ svg-icon {
 //   background: #e4fffc;
 // }
 // --- timepoints ---
+
 .timepoints {
   display: inline-block;
 }
@@ -126,16 +127,21 @@ svg-icon {
   align-items: center;
 }
 // --- elisas ---
+
 .elisa-group {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-#positive, #negative, #unknown {
+#negative,
+#positive,
+#unknown {
   height: 24px;
   margin-left: 3px;
 }
 //
+
 #positive {
   color: accent-redder(A700);
   // color: map-get($mat-pink, A700);
