add count of additions

--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -1,8 +1,9 @@
 <h2><span class="stepper-title">Preview additions to database</span></h2>
 
 <div *ngIf="previewData && previewData.length > 0; else no_data">
+  <h2>{{ previewData.length }} new samples will be added: </h2>
   <p>
-    Preview any new samples to be added to the database.
+    Preview any additions to the database.
   </p>
 </div>
 
