--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
@@ -2,6 +2,7 @@
   <h2><span class="stepper-title">Review changes to database</span></h2>
 
   <div class="helper-text" *ngIf="dataSource && dataSource.data.length > 0">
+    <h2>{{ dataSource.data.length }} samples will be changed: </h2>
     <p>
       Double check any data that you are about to change.
     </p>
