updated terms, privacy from scripps legal

--- a/sample-viewer/src/app/admin/privacy/privacy.component.html
+++ b/sample-viewer/src/app/admin/privacy/privacy.component.html
@@ -7,38 +7,24 @@
   </div>
 
   <section class="privacy about-text">
-    <div class="about-group">
+    <p>
+      Your privacy is important to us, so we operate data.cvisb.org (“Site”) by the following principles:
+    </p>
+
+    <div class="privacy-group">
+      <h4>Confidentiality</h4>
+
+      <p>
+        You may use our Site without disclosing personally identifiable information.
+      </p>
+    </div>
+
+    <div class="privacy-group">
       <h4>Cookies</h4>
-      <p>
-        To enhance your experience on our site, many of our web pages use "cookies". Cookies are small text files that we place in your computer's browser to store your preferences. Cookies, by themselves, do not tell us your email address or other personal information
-        unless you choose to provide this information to us by, for example, registering to use our service. Once you choose to provide a web page with personal information, this information may be linked to the data stored in the cookie. A cookie is
-        like an identification card. It is unique to your computer and can only be read by the server that gave it to you.
-      </p>
 
       <p>
-        We use cookies to understand site usage and to improve the content and offerings on our site. For example, we may use cookies to personalize your experience on our web pages (e.g. to recognize you by name when you return to our site). We also may use
-        cookies to offer you products and services.
-      </p>
-
-      <p>
-        Cookies save you time as they help us to remember who you are. Cookies help us to be more efficient. We can learn about what content is important to you and what is not. We can revise or remove web pages that are not of interest and focus our energies
-        on content you want.
-      </p>
-    </div>
-
-    <div class="privacy-group">
-      <h4>Consent</h4>
-      <p class="emphasis">
-        By continuing with this website you consent to cookies being used and agree to us using any data provided by you in any of our services.
-      </p>
-
-    </div>
-
-
-    <div class="privacy-group">
-      <h4>Google Analytics</h4>
-      <p>
-        data.cvisb.org uses Google Analytics to track user interaction. Learn more about <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage" target="_blank" rel="noreferrer">Google Analytics and cookie usage</a>.
+        To enhance your experience on our Site, the Site uses cookies (a small file that uniquely identifies your browser) which helps track traffic coming to our Site, including visitor preferences and trends. This information used to make improvements to better
+        serve our audience's needs.
       </p>
 
       <p>
@@ -49,11 +35,37 @@
       <p>
         Please be aware that if you do not configure your browser you will accept cookies provided by this website.
       </p>
-
-      <p>
-        You can configure your browser to accept all cookies or to alert you every time a cookie is offered by a website's server.
-      </p>
     </div>
+
+
+
+    <div class="privacy-group">
+      <h4>Aggregate Information</h4>
+      <p>
+        We may use general traffic, site usage, and length of stay information for statistical reporting and may share such reports with organizations with which we have a business relationship. This aggregate information does not personally identify you.
+      </p>
+
+    </div>
+
+    <div class="privacy-group">
+      <h4>Other Sites</h4>
+      <p>
+        This privacy policy applies only to your use of the Site. The Site contains links to third party sites, including sites that may indicate a special relationship with us. We are not responsible for the privacy practices of such other sites. You should
+        read the privacy policies of each site you visit to determine what information that site may be collecting about you.
+      </p>
+
+    </div>
+
+    <div class="privacy-group">
+      <h4>Changes to Privacy Policy</h4>
+      <p>
+        Please review the Privacy Policy regularly. The Privacy Policy may change at any time. By using the Site after a change in the Privacy Policy, you agree to follow and be bound by the Privacy Policy as changed. If you do not want information about you
+        used in a manner set forth in this Privacy Policy, please do not access or browse this Site.
+      </p>
+
+    </div>
+
+
 
   </section>
 </div>
