add more explicit dev warning label

--- a/sample-viewer/src/app/header/header.component.html
+++ b/sample-viewer/src/app/header/header.component.html
@@ -40,4 +40,9 @@
       </div>
     </nav>
   </div>
+
 </header>
+
+<div class="container dev-banner dev-warning" *ngIf="prodEnvironment === false">
+  Data on the development site are not actively maintained. View the most recent data at <a href="https://data.cvisb.org/home">data.cvisb.org</a>
+</div>
