--- a/sample-viewer/src/app/header/header.component.scss
+++ b/sample-viewer/src/app/header/header.component.scss
@@ -25,7 +25,7 @@
 .dev-banner {
   justify-content: center;
   padding: 5px 10px;
-  border: 2px solid white;
+  border-top: 2px solid white;
   // background: $ebola-color;
   // background: accent-redder(500);
   background: accent-redder(A400);
