--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
@@ -4,7 +4,7 @@
   <div class="helper-text" *ngIf="dataSource && dataSource.data.length > 0">
     <h2>{{ dataSource.data.length }} samples will be changed: </h2>
     <p>
-      Double check any data that you are about to change.
+      Double check any data that you are about to change. Any data that remains unchanged will be shown in black, while <span class="old-data">old data, shown in red,</span> will be replaced by <span class="new-data">new values, shown in green</span>
     </p>
 
     <p>
