--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="user.write" class="container-column">
   <p>
-    Sample lists should be uploaded as either a .csv, .tsv, or a .json.
+    Sample lists should be uploaded as either a .csv, .tsv, or .json file.
   </p>
 
   <div class="file-info" *ngIf="fileName">
