--- a/sample-viewer/src/app/add-samples/combine-dupes/combine-dupes.component.html
+++ b/sample-viewer/src/app/add-samples/combine-dupes/combine-dupes.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="data && data.length > 0">
+<div [ngClass]='data && data.length > 0 ? "visible": "hidden"'>
   <div class="duplicate-helper-text">
 
     <p>
