preview diff sorting; update helper text

--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -1,7 +1,9 @@
 <h2><span class="stepper-title">Preview additions to database</span></h2>
 
+<h2 *ngIf="previewData">{{ previewData.length }} new samples will be added</h2>
+
 <div *ngIf="previewData && previewData.length > 0; else no_data">
-  <h2>{{ previewData.length }} new samples will be added: </h2>
+
   <p>
     Preview any additions to the database.
   </p>
@@ -9,7 +11,7 @@
 
 <ng-template #no_data>
   <p>
-    No new samples added.  Looks like you're just modifying existing samples's metadata and/or locations.
+    No new samples added. Looks like you're just modifying existing samples's metadata and/or locations.
   </p>
 </ng-template>
 
