--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
@@ -1,8 +1,9 @@
 <div class="stepper-header">
   <h2><span class="stepper-title">Review changes to database</span></h2>
 
+  <h2 *ngIf="dataSource && dataSource.data">{{ dataSource.data.length }} samples will be changed</h2>
+
   <div class="helper-text" [ngClass]='dataSource && dataSource.data.length > 0 ? "visible": "hidden"'>
-    <h2>{{ dataSource.data.length }} samples will be changed: </h2>
     <p>
       Double check any data that you are about to change. Any data that remains unchanged will be shown in black, while <span class="old-data">old data, shown in red,</span> will be replaced by <span class="new-data">new values, shown in green</span>
     </p>
