fix init err, fix grammar

--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -1,6 +1,6 @@
 <h2><span class="stepper-title">Preview additions to database</span></h2>
 
-<h2 *ngIf="previewData">{{ previewData.length }} new samples will be added</h2>
+<h2 *ngIf="previewData">{{ previewData.length }} new {{ previewData.length === 1 ? "sample" : "samples" }} will be added</h2>
 
 <div *ngIf="previewData && previewData.length > 0; else no_data">
 
