--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.html
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.html
@@ -1,4 +1,4 @@
-<div class="spinner-container container" *ngIf="loading">
+<div class="spinner-container container" *ngIf="dataSource.loadingState$ | async">
   <mat-spinner></mat-spinner>
 </div>
 
