grab count from datasource

--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -1,3 +1,4 @@
+<h1>datasource: {{datasource_count}}</h1>
 <div class="filter-container">
   <div class="filter-header">
     <div class="container">
