fixing syntax error

--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -15,4 +15,4 @@
   </p>
 </ng-template>
 
-<app-preview-samples [data]="previewData" ignoredColumns="['_merge', '_id']"></app-preview-samples>
+<app-preview-samples [data]="previewData" [ignoredColumns]="['_merge', '_id']"></app-preview-samples>
