--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
@@ -55,6 +55,10 @@ $old-color: accent-redder(600);
   }
 }
 
+.location-panel {
+  box-shadow: none !important;
+}
+
 .hide-pagination {
   display: none !important;
 }
