--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -36,6 +36,10 @@ th.mat-header-cell {
   background: $grey-50;
 }
 
+.location-panel {
+  box-shadow: none !important;
+}
+
 .hide-pagination {
   // display: none !important;
 }
